Fix pagination gap styles

--- a/app/assets/stylesheets/kaminari.scss
+++ b/app/assets/stylesheets/kaminari.scss
@@ -59,6 +59,11 @@
     border: none;
   }
 
+  .gap {
+    color: #beb8bc;
+    border: 1px solid gray;
+  }
+
   .page-item.active .page-link {
     background-color: #1e1e1e;
   }
